--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
                           </form>
                         </li>
                         <li class="nav-item">
-                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link grey-hover" href="#">
+                          <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link grey-hover" href="{% url 'view_bag' %}">
                               <div class="text-center">
                                   <p class="my-0">
                                       {% if grand_total %}
