--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -13,6 +13,7 @@
         <div class="col-8 offset-2">
             {% if bag_items %}
                 <div class="table-responsive rounded">
+                    {{ bag_items }}
                 </div>
             {% else %}
                 <p class="lead mb-5 text-darker">Your bag is empty.</p>
