--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container m-4">
+<div class="container">
     <div class="row bag-header">
         <div class="col-8 offset-2">
             <h2 class="logo-font text-darker mb-4">Shopping Bag</h2>
@@ -10,10 +10,69 @@
     </div>
 
     <div class="row">
-        <div class="col-8 offset-2">
+        <div class="col">
             {% if bag_items %}
                 <div class="table-responsive rounded">
-                    {{ bag_items }}
+                    <table class="table table-sm table-borderless">
+                        <thead class="text-black my-4">
+                            <tr>
+                                <th scope="col">Product Info</th>
+                                <th scope="col">Item</th>
+                                <th scope="col">Price</th>
+                                <th scope="col">Qty</th>
+                                <th scope="col">Subtotal</th>
+                            </tr>
+                        </thead>
+
+                        {% for item in bag_items %}
+                            <tr>
+                                <td class="p3">
+                                    <img class="img-fluid bag-img rounded" src="{{ item.product.image.url }}">
+                                </td>
+                                <td class="p3">
+                                    <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                                    <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
+                                </td>
+                                <td class="p3">
+                                    <p class="my-0">£{{ item.product.price }}</p>
+                                </td>
+                                <td class="p3">
+                                    <p class="my-0">£{{ item.quantity }}</p>
+                                </td>
+                                <td class="p3">
+                                    <p class="my-0">£{{ item.product.price }}</p>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        <tr>
+                            <td colspan="5" class="pt-5 text-right">
+                                <h6><strong>Bag Total: £{{ total|floatformat:2 }}</strong></h6>
+                                <h6>Delivery: £{{ delivery|floatformat:2 }}</h6>
+                                <h4 class="mt-4"><strong>Grand Total: £{{ grand_total|floatformat:2 }}</strong></h4>
+                                {% if free_delivery_delta > 0 %}
+                                    <p class="mb-1 text-danger">
+                                        You could get free delivery by spending just <strong>{{ free_delivery_delta }}</strong> more!
+                                    </p>
+                                {% endif %}
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="5" class="text-right">
+                                <a href="{% url 'products' %}" class="btn btn-dark btn-lg">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                                <a href="" class="btn btn-dark btn-lg">
+                                    <span class="text-uppercase">Secure Checkout</span>
+                                    <span class="icon">
+                                        <i class="fas fa-lock"></i>
+                                    </span>
+                                </a>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
             {% else %}
                 <p class="lead mb-5 text-darker">Your bag is empty.</p>
