--- a/static/css/base.css
+++ b/static/css/base.css
@@ -149,3 +149,13 @@ input{
     background-size: cover !important;
     background-position: center;
 }
+
+.bag-header{
+    margin-top:100px;
+}
+
+.bag-img{
+    max-width:300px;
+    max-height: 300px;
+    margin-right: 50px;
+}
