--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -37,7 +37,7 @@
                                     <p class="my-0">£{{ item.product.price }}</p>
                                 </td>
                                 <td class="p3">
-                                    <form method="POST" action="" class="form update-form">
+                                    <form method="POST" action="{% url 'adjust_bag' item.item_id %}" class="form update-form">
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <div class="input-group">
@@ -114,30 +114,29 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
+
 {% block post_load_js %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
 
 <script type="text/javascript">
-    //Update quantity on click
+    // Update quantity on click
     $('.update-link').click(function(e) {
         var form = $(this).prev('.update-form');
         form.submit();
     })
 
-    //Remove item and reload on click
+    // Remove item and reload on click
     $('.remove-item').click(function(e) {
-        var csfrToken = "{{ csrf_token }}";
-        var itemID = $(this).attr('id').split('remove_')[1];
-        var url = `/bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken}
-
-        $.post(url, data)
-            .done(function(){
-                location.reload();
-            })
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken};
+        $.post(url, data)	
+         .done(function() {	
+             location.reload();	
+         });
     })
 </script>
 {% endblock %}
